obrazki-dla-produktow-i-kategorii-podstawowe-stylowanie-i-bootstrap

--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -3,31 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Leki</title>
-
+    <link rel="stylesheet" th:href="@{/css/bootstrap/bootstrap.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/general.css}"/>
 </head>
 <body>
 
-    <div class="titleText">
-        <h1 class="small-mg-bot">Kategorie</h1>
-    </div>
+<div class="titleText">
+    <h1 class="small-mg-bot">Kategorie</h1>
+</div>
 
-    <div class="container">
-        <div class="row">
-            <th:block th:each="category : ${categories}">
-                <div class="col">
-                    <div class="cat-data">
-<!--                        <img class="cat-img" th:src="@{'/img/categories/' +-->
-<!--									${category.getName().toLowerCase()} + '.jpg'}"-->
-<!--                             th:alt="${category.getName().toLowerCase()}" onerror="imgError(this)">-->
-
-                        <a class="in-category" th:href="@{/products(categoryId=${category.getId()})}"
-                           th:text="${category.getName()}"></a>
-                    </div>
+<div class="container">
+    <div class="row">
+        <th:block th:each="category : ${categories}">
+            <div class="col">
+                <div>
+                    <img th:src="@{'/img/categories/' +${category.getId()} + '.png'}">
+                    <a th:href="@{/products(categoryId=${category.getId()})}" th:text="${category.getName()}"></a>
                 </div>
-            </th:block>
-        </div>
-
-<!--        <nav th:replace="fragments/footer :: footer"/>-->
+            </div>
+        </th:block>
     </div>
+
+</div>
 </body>
 </html>
