--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -2,39 +2,30 @@
 <html lang="pl" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title th:text="'Category: ' + ${categoryName}"></title>
+    <title th:text="${categoryName}"></title>
+    <link rel="stylesheet" th:href="@{/css/bootstrap/bootstrap.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/general.css}"/>
 </head>
 <body>
-    <div class="titleText small-mg-bot">
-        <h1 th:text="'Kategoria: ' + ${categoryName}"></h1>
-
-    </div>
-    <div class="container">
-        <div class="row" th:if="${products.size()} != 0">
-            <th:block th:each="product : ${products}">
-                <div class="col">
-                    <div class="prod-data">
-                        <div class="prod-desc">
-                            <h2 th:text="${product.getName().toUpperCase()}"></h2>
-                        </div>
-
-
-                        <div class="prod-prize">
-                            <a class="prod-href" th:href="@{/products/product(productId=${product.getId()})}"
-                               th:text="${#numbers.formatDecimal(product.getPrize(), 2, 2)} + ' zł'"></a>
-                        </div>
+<div class="titleText small-mg-bot">
+    <h1 th:text="${categoryName}"></h1>
+</div>
+<div class="container">
+    <div class="row" th:if="${products.size()} != 0">
+        <th:block th:each="product : ${products}">
+            <div class="col">
+                <div>
+                    <div>
+                        <h2 th:text="${product.getName().toUpperCase()}"></h2>
+                    </div>
+                    <div>
+                        <a th:href="@{/products/product(productId=${product.getId()})}"
+                           th:text="${#numbers.formatDecimal(product.getPrize(), 2, 2)} + ' zł'"></a>
                     </div>
                 </div>
-            </th:block>
-        </div>
-
-        <div id="prod-nf" th:if="${products.size()} == 0">
-            <h2>
-                <i class="glyphicon glyphicon-warning-sign"></i>
-                Nie znaleziono produktów!
-                <i class="glyphicon glyphicon-warning-sign"></i>
-            </h2>
-        </div>
+            </div>
+        </th:block>
     </div>
+</div>
 </body>
 </html>
