--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" th:href="@{/css/general.css}"/>
 </head>
 <body>
-<div class="titleText small-mg-bot">
-    <h1 th:text="${categoryName}"></h1>
-</div>
+
 <div class="container">
+    <nav th:replace="fragments/header :: header"></nav>
+    <div class="jumbotron">
+        <h1 class="small-mg-bot" th:text="${categoryName}"></h1>
+    </div>
     <div class="row" th:if="${products.size()} != 0">
         <th:block th:each="product : ${products}">
             <div class="col">
@@ -18,6 +20,7 @@
                     <div>
                         <h2 th:text="${product.getName().toUpperCase()}"></h2>
                     </div>
+                    <img class="prod-img" th:src="@{'/img/products/' + ${product.getId()} + '.jpg'}">
                     <div>
                         <a th:href="@{/products/product(productId=${product.getId()})}"
                            th:text="${#numbers.formatDecimal(product.getPrize(), 2, 2)} + ' zł'"></a>
