--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -8,6 +8,10 @@
 </head>
 <body>
 <div class="container">
+    <nav th:replace="fragments/header :: header"></nav>
+    <div class="jumbotron">
+        <h1 class="small-mg-bot" th:text="${product.getName()}"></h1>
+    </div>
     <div class="row">
         <div class="col-sm-12 col-lg-6">
             <img th:src="@{'/img/products/' + ${product.getId()} + '.jpg'}">
