--- a/src/main/resources/static/css/general.css
+++ b/src/main/resources/static/css/general.css
@@ -16,6 +16,20 @@ p {
     font-size: 1.5rem;
 }
 
-main-link {
+.main-link {
     text-decoration: none;
+}
+
+.category-img{
+    max-height:200px;
+    max-width:200px;
+    height:auto;
+    width:auto;
+}
+
+.product-img {
+    max-height:350px;
+    max-width:350px;
+    height:auto;
+    width:auto;
 }
