--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -14,7 +14,7 @@
     </div>
     <div class="row">
         <div class="col-sm-12 col-lg-6">
-            <img th:src="@{'/img/products/' + ${product.getId()} + '.jpg'}">
+            <img class="product-img"  th:src="@{'/img/products/' + ${product.getId()} + '.jpg'}">
         </div>
         <div class="col-sm-12 col-lg-6">
             <div>
