dodawanie produktu oraz jego walidacja

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -14,7 +14,7 @@
         <ul class="navbar-nav ml-auto">
             <li class="nav-item"><a class="nav-link" th:href="@{/welcome}">Strona główna</a></li>
             <li class="nav-item"><a class="nav-link" th:href="@{/main}">Produkty</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Dodaj produkt</a></li>
+            <li class="nav-item"><a class="nav-link" th:href="@{/addProduct}">Dodaj produkt</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Koszyk</a></li>
         </ul>
     </nav>
