--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -13,7 +13,7 @@
     <nav th:replace="fragments/header :: header"></nav>
     <div class="jumbotron">
         <h1 class="small-mg-bot">Kategorie</h1>
-        <p>Wybierz kategorię leku</p>
+        <p>Wybierz kategorię</p>
     </div>
     <div class="row">
         <th:block th:each="category : ${categories}">
