--- a/src/main/resources/templates/addProduct.html
+++ b/src/main/resources/templates/addProduct.html
@@ -65,6 +65,16 @@
 
             <div class="form-group col-lg-10">
                 <label class="control-label col-lg-2">
+                    Liczba sztuk:
+                    <input type="number" name="prize" min="0" value="0"
+                            th:field="*{unitsInStock}" />
+                </label>
+                <small th:if="${#fields.hasErrors('unitsInStock')}" th:errors="*{unitsInStock}"
+                       class="text-danger"></small>
+            </div>
+
+            <div class="form-group col-lg-10">
+                <label class="control-label col-lg-2">
                     Obraz leku
                     <input type="file" name="file" class="input-large" value=""/>
                 </label>
