--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="pl" xmlns:th="http://www.thymeleaf.org">
+<html lang="pl" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">>
 <head>
     <div th:fragment="header-css">
         <meta charset="UTF-8">
@@ -10,12 +11,34 @@
 <body>
 <div th:fragment="header" class="header">
     <nav class="navbar navbar-expand-sm bg-light">
-    <h3 class="text-muted">Sklep internetowy</h3>
+        <h3 class="text-muted">Sklep internetowy</h3>
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link" th:href="@{/welcome}">Strona główna</a></li>
-            <li class="nav-item"><a class="nav-link" th:href="@{/main}">Produkty</a></li>
-            <li class="nav-item"><a class="nav-link" th:href="@{/addProduct}">Dodaj produkt</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Koszyk</a></li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/welcome}">Strona główna</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/main}">Produkty</a>
+            </li>
+            <th:block sec:authorize="hasAuthority('ADMIN')">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/addProduct}">Dodaj produkt</a>
+                </li>
+            </th:block>
+            <th:block sec:authorize="hasAuthority('USER')">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Koszyk</a>
+                </li>
+            </th:block>
+            <th:block sec:authorize="isAnonymous()">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/login}">Zaloguj się</a>
+                </li>
+            </th:block>
+            <th:block sec:authorize="isAuthenticated()">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/logout}">Wyloguj się</a>
+                </li>
+            </th:block>
         </ul>
     </nav>
 </div>
