dodano mozliwosc kupna produktów

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,6 +12,14 @@
 <div th:fragment="header" class="header">
     <nav class="navbar navbar-expand-sm bg-light">
         <h3 class="text-muted">Sklep internetowy</h3>
+
+        <th:block sec:authorize="isAuthenticated()">
+            <div class="mx-auto order-0">
+                <div style="display:inline-block">Witaj, </div>
+                <div style="display:inline-block" sec:authentication="name"></div>
+            </div>
+        </th:block>
+
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/welcome}">Strona główna</a>
@@ -26,7 +34,7 @@
             </th:block>
             <th:block sec:authorize="hasAuthority('USER')">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Koszyk</a>
+                    <a class="nav-link" th:href="@{/order/cart}">Koszyk</a>
                 </li>
             </th:block>
             <th:block sec:authorize="isAnonymous()">
