--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -14,17 +14,28 @@
     </div>
     <div class="row">
         <div class="col-sm-12 col-lg-6">
-            <img class="product-img"  th:src="@{'/img/products/' + ${product.getId()} + '.jpg'}">
+            <img class="product-img" th:src="@{'/img/products/' + ${product.getId()} + '.jpg'}">
         </div>
         <div class="col-sm-12 col-lg-6">
-            <div>
-                <div th:text="${#numbers
+            <div th:text="${#numbers
 							.formatDecimal(product.getPrize(), 2, 2)} + ' zł'"></div>
-                <div>
-                    <div th:text="${product.getDescription()}"></div>
-                    <br>
-                </div>
+            <div>
+                <div th:text="${product.getDescription()}"></div>
+                <br>
             </div>
+            <th:block sec:authorize="hasAuthority('USER')">
+                <form th:action="${'/order/addToCart/' + product.getId()}"
+                      th:method="post" class="unit-button">
+                    <button type="submit" name="submit" value=""
+                            th:text="'Dodaj do koszyka'"></button>
+                </form>
+            </th:block>
+            <th:block sec:authorize="hasAuthority('ADMIN')">
+                <form th:action="@{/deleteProduct(productId=${product.getId()})}" th:method="delete">
+                    <button type="submit" name="submit" value="" th:text="Usuń"
+                            onClick="return confirm('Jesteś pewny?')"></button>
+                </form>
+            </th:block>
         </div>
     </div>
 </div>
