--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -31,6 +31,12 @@
         </div>
         <br>
     </form>
+
+    <form th:action="@{/registration}" th:method="get">
+        <div>
+            <button type="submit" name="submit" value="" th:text="Zarejestruj"></button>
+        </div>
+    </form>
 </div>
 </body>
 </html>
