--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -2,7 +2,7 @@
 <html lang="pl" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Zamówienia</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap/bootstrap.min.css}"/>
     <link rel="stylesheet" th:href="@{/css/general.css}"/>
 </head>
