--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -15,7 +15,7 @@
     <th:block th:if="${order.getOrderProducts().size() != 0}">
         <div>
             <form th:action="@{/order/addAddress}" th:method="post" >
-                <button class= type="submit" name="submit" value=""
+                <button class="btn btn-primary" type="submit" name="submit" value=""
                         th:text="Zamów" ></button>
             </form>
         </div>
