--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -13,6 +13,7 @@
         <h1>Witaj w sklepie internetowym LekNaKażdąOkazję</h1>
         <p>Tutaj znajdziesz każdy lek!</p>
     </div>
+    <a style="text-decoration: none" th:href="@{/main}"><button class="button-block">Wejdź i sprawdź sam!</button></a>
     <nav th:replace="fragments/footer :: footer"></nav>
 </div>
 </body>
