--- a/src/main/resources/static/css/general.css
+++ b/src/main/resources/static/css/general.css
@@ -33,3 +33,20 @@ p {
     height:auto;
     width:auto;
 }
+
+.button-block {
+    display: block;
+    width: 100%;
+    border: none;
+    background-color: #3e4545;
+    color: white;
+    padding: 14px 28px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+}
+
+.button-block:hover {
+    background-color: #ddd;
+    color: black;
+}
