dodano podpis leków i kategorii

--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -23,7 +23,7 @@
 
                         <a th:href="@{/products/product(productId=${product.getId()})}">
                             <img class="category-img" th:src="@{'/img/products/' + ${product.getId()} + '.jpg'}"
-                                 th:alt="${category.getName()}">
+                                 th:alt="${product.getName()}">
                             <div class="caption main-link"
                                  th:text="${#numbers.formatDecimal(product.getPrize(), 2, 2)} + ' zł'">
                             </div>
