--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -13,7 +13,9 @@
         <h1>Witaj w sklepie internetowym LekNaKażdąOkazję</h1>
         <p>Tutaj znajdziesz każdy lek!</p>
     </div>
-    <a style="text-decoration: none" th:href="@{/main}"><button class="button-block">Wejdź i sprawdź sam!</button></a>
+    <form th:action="@{/main}" th:method="get">
+        <button class="button-block">Wejdź i sprawdź sam!</button>
+    </form>
     <nav th:replace="fragments/footer :: footer"></nav>
 </div>
 </body>
